# simplicity-lending

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/cli/: .env.example  Cargo.toml
crates/cli/examples/: loan_repayment_flow.md
crates/cli/src/: cli.rs  config.rs  error.rs  explorer.rs  lib.rs  main.rs
crates/cli/src/commands/: asset_auth.rs  basic.rs  core.rs  error.rs  lending.rs  mod.rs  pre_lock.rs  script_auth.rs
crates/cli/src/commands/account/: core.rs  error.rs  mod.rs
crates/cli/src/commands/factory/: core.rs
crates/cli/src/commands/issuance/: core.rs  error.rs
crates/cli/src/commands/lending/: core.rs  error.rs  mod.rs
crates/cli/src/commands/pre_lock/: core.rs  error.rs  mod.rs
crates/cli/src/commands/utility/: core.rs  error.rs  mod.rs
crates/cli/src/modules/: keys.rs  mod.rs  settings.rs  store.rs  utils.rs
crates/contracts/: Cargo.toml  Simplex.toml
crates/contracts/simf/: asset_auth_vault.simf  issuance_factory.simf  lending.simf  ownable_script_auth.simf  pre_lock.simf
crates/contracts/src/: error.rs  lib.rs  main.rs
crates/contracts/src/artifacts/: asset_auth.rs  lending.rs  mod.rs  pre_lock.rs  script_auth.rs
crates/contracts/src/asset_auth/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/lending/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/lending/source_simf/: lending.simf
crates/contracts/src/pre_lock/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/pre_lock/source_simf/: pre_lock.simf
crates/contracts/src/programs/: asset_auth.rs  issuance_factory.rs  lending.rs  mod.rs  ownable_script_auth.rs  pre_lock.rs  program.rs  script_auth.rs
crates/contracts/src/programs/asset_auth/: core.rs  mod.rs  params.rs  witness.rs
crates/contracts/src/programs/asset_auth_vault/: core.rs  mod.rs  params.rs  witness.rs
crates/contracts/src/programs/issuance_factory/: core.rs  error.rs  metadata.rs  mod.rs  params.rs  witness.rs
crates/contracts/src/programs/lending/: core.rs  error.rs  metadata.rs  mod.rs  offer.rs  params.rs  witness.rs
crates/contracts/src/programs/ownable_script_auth/: core.rs  mod.rs  params.rs  witness.rs
crates/contracts/src/programs/pre_lock/: core.rs  error.rs  metadata.rs  mod.rs  params.rs  witness.rs
crates/contracts/src/programs/script_auth/: core.rs  mod.rs  params.rs  (+1 more)
crates/contracts/src/script_auth/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/sdk/: mod.rs  parameters.rs
crates/contracts/src/transactions/: core.rs  mod.rs
crates/contracts/src/utils/: basis_points.rs  mod.rs  op_return.rs  parameters.rs  seed.rs
crates/contracts/tests/: asset_auth.rs  asset_auth_test.rs  asset_auth_vault.rs  issuance_factory.rs  lending.rs  mod.rs  ownable_script_auth.rs  pre_lock.rs  pre_lock_test.rs  script_auth.rs  script_auth_test.rs  wallet_abi_asset_auth.rs  wallet_abi_lending_protocol.rs  wallet_abi_script_auth.rs
crates/contracts/tests/asset_auth/: burn.rs  happy_path.rs  mod.rs  setup.rs  unlock_failure_flows.rs  unlock_success_flows.rs
crates/contracts/tests/asset_auth_vault/: final_supply_failure_flows.rs  final_supply_success_flows.rs  mod.rs  partial_withdraw_failure_flows.rs  partial_withdraw_success_flows.rs  setup.rs  supply_failure_flows.rs  supply_success_flows.rs  withdraw_all_failure_flows.rs  withdraw_all_success_flows.rs
crates/contracts/tests/common/: asserts.rs  issuance.rs  mod.rs  process_req.rs  tx_steps.rs  utxo.rs  wallet.rs
crates/contracts/tests/issuance_factory/: creation_metadata_success_flow.rs  issue_assets_failure_flows.rs  issue_assets_success_flows.rs  mod.rs  remove_factory_failure_flows.rs  remove_factory_success_flows.rs  setup.rs
crates/contracts/tests/lending/: claim.rs  creation_metadata_success_flow.rs  full_offer_repayment_success_flows.rs  liquidate.rs  loan_liquidation_failure_flows.rs  loan_liquidation_success_flows.rs  loan_repayment_success_flows.rs  mod.rs  offer_acceptance_success_flows.rs  offer_cancellation_failure_flows.rs  offer_cancellation_success_flows.rs  offer_liquidation_success_flows.rs  partial_offer_repayment_success_flows.rs  repay.rs  setup.rs  support.rs
crates/contracts/tests/ownable_script_auth/: mod.rs  ownership_transfer.rs  ownership_transfer_success_flows.rs  script_auth_unlock.rs  setup.rs  support.rs  unlock_success_flows.rs
crates/contracts/tests/pre_lock/: cancel.rs  cancellation_success_flow.rs  create.rs  create_lending.rs  creation_metadata_success_flow.rs  lending_creation_success_flow.rs  mod.rs  setup.rs  support.rs
crates/contracts/tests/script_auth/: happy_path.rs  mod.rs  unlock_success_flows.rs
crates/contracts/tests/support/: wallet_abi_asset_auth_support.rs  wallet_abi_common.rs  wallet_abi_lending_support.rs  wallet_abi_script_auth_support.rs
crates/contracts/tests/utils/: asset_helpers.rs  mod.rs  signer.rs  split_helpers.rs
crates/contracts/tests/wallet_abi/: asset_auth.rs  mod.rs  script_auth.rs  support.rs
crates/indexer/: Cargo.toml  Dockerfile  README.md
crates/indexer/configuration/: base.yaml
crates/indexer/migrations/: 20260205111908_create_offers_table.sql  20260205141654_tables_creation.sql
crates/indexer/scripts/: init_db.sh
crates/indexer/src/: configuration.rs  db.rs  esplora_client.rs  indexer.rs  lib.rs  main.rs  startup.rs
crates/indexer/src/api/: db.rs  error.rs  mod.rs  openapi.rs  openapi_params.rs  openapi_schemas.rs  params.rs  server.rs  utils.rs
crates/indexer/src/indexer/: block_processor.rs  cache.rs  db.rs  mod.rs  processors.rs  tx_processor.rs  worker.rs
crates/indexer/src/models/: factories.rs  factory_auths.rs  factory_utxo.rs  mod.rs  offer.rs  offer_participants.rs  offer_utxo.rs  sync.rs
crates/indexer/src/routes/: greet.rs
crates/indexer/tests/: api_integration.rs  indexer_integration.rs
crates/indexer/tests/common/: mod.rs
crates/session/: Cargo.toml
crates/session/src/: error.rs  lib.rs
crates/session/src/indexer/: client.rs  error.rs  mod.rs  query.rs  types.rs
crates/session/tests/: indexer_client.rs
(+708 files in other folders)
