[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
ring = "0.17.14"
hex = "0.4.3"
sha2 = { version = "0.10.9", features = ["compress"] }
serde = { version = "1.0.228", features = ["derive"]}
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.41" }
modular-bitfield = { version = "0.13.1"}

cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }

smplx-std = { git = "https://github.com/BlockstreamResearch/smplx", rev = "b289c562661c52e8dc87d0145213a089a32de1cc" }

[patch.crates-io]
lwk_common = { git = "https://github.com/Blockstream/lwk", rev = "d384a20b8e2dde83ca0d733ba6c22dd3c5daac56" }
lwk_signer = { git = "https://github.com/Blockstream/lwk", rev = "d384a20b8e2dde83ca0d733ba6c22dd3c5daac56" }
lwk_simplicity = { git = "https://github.com/Blockstream/lwk", rev = "d384a20b8e2dde83ca0d733ba6c22dd3c5daac56" }
lwk_wollet = { git = "https://github.com/Blockstream/lwk", rev = "d384a20b8e2dde83ca0d733ba6c22dd3c5daac56" }
