[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.dependencies]
ring = "0.17.14"
hex = "0.4.3"
simplex = { git = "https://github.com/BlockstreamResearch/smplx.git", rev = "6a6bef4d8b14aa7bdfdfb35ef2174cc6a370ad45", package = "smplx-std" }
sha2 = { version = "0.10.9", features = ["compress"] }
serde = { version = "1.0.228", features = ["derive"]}
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.41" }
modular-bitfield = { version = "0.13.1"}

cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
