[package]
name = "lending-contracts"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending contract"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlockstreamResearch/simplicity-lending"
readme = "README.md"
keywords = ["simplicity", "lending", "liquid", "bitcoin", "elements", "contracts"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["asset_auth", "script_auth", "lending", "pre_lock"]
asset_auth = []
script_auth = []
lending = []
pre_lock = []

[lints]
workspace = true

[dependencies]
bincode = "2.0.1"

thiserror = "2"

ring = { workspace = true }
sha2 = { workspace = true }

hex = { workspace = true }
modular-bitfield = { workspace = true }

simplicityhl = { workspace = true }

simplicityhl-core = { workspace = true }

simplicity-contracts = { workspace = true }

[dev-dependencies]
anyhow = "1"
cargo-husky = { workspace = true }
lwk_common = "0.15.0"
lwk_simplicity = { git = "https://github.com/KyrylR/lwk", rev = "eab94b8", features = ["wallet_abi_test_utils"] }
lwk_wollet = { version = "0.15.0", default-features = false, features = ["electrum", "esplora"] }
minreq = "2.14.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
