[package]
name = "lending-indexer"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending indexer service"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "simplicity-lending-indexer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version= "1", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }


[dev-dependencies]
anyhow = "1"
reqwest = "0.13.1"
cargo-husky = { workspace = true }
