[package]
name = "lending-indexer"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending indexer service"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "simplicity-lending-indexer"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
thiserror = "2"
serde_json = "1"

axum = "0.8.8"
reqwest = "0.13.1"
config = { version = "0.15.16", default-features = true }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version= "1", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }

hex = { workspace = true }

simplicityhl = { workspace = true }

[dev-dependencies]
anyhow = "1"
cargo-husky = { workspace = true }
