[package]
name = "lending-session"
version = "0.1.0"
edition = "2024"
description = "Simplicity Lending session lib"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
smplx-std = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["query"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"
cargo-husky = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
